Bug 288341 - What you see is not what you want printed
Summary: What you see is not what you want printed
Status: RESOLVED FIXED
Alias: None
Product: calligrawords
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.4-snapshots
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Calligra Words Bugs
URL:
Keywords:
: 291955 (view as bug list)
Depends on:
Blocks:
 
Reported: 2011-12-06 15:37 UTC by Adam Pigg
Modified: 2012-01-19 13:56 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Example of exported PDF document (35.08 KB, application/pdf)
2012-01-16 21:40 UTC, David Heijkamp
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Adam Pigg 2011-12-06 15:37:49 UTC
Version:           2.4-snapshots (using KDE 4.7.3) 
OS:                Linux

When printing a document in words, if text is selected, it prints inverted.

Reproducible: Didn't try

Steps to Reproduce:
Create simple document
select text
print

Actual Results:  
text print inverted

Expected Results:  
text print normally
Comment 1 David Heijkamp 2012-01-16 21:36:51 UTC
Calligra version: 2.4 Beta6
KDE version: 4.7.97 (4.8 RC2)
Distro version: Fedora 16

I can confirm this behavior. If you select text or if you have enabled 'Show Formatting Characters' these are printed, albeit in a messed up way. The same is the case when you export the document to PDF.

Also, normal characters are slightly stretched when printed directly from Words. When first exporting to PDF and then printing this document from Okular the text is printer in a normal, sharp manner.
Comment 2 David Heijkamp 2012-01-16 21:40:27 UTC
Created attachment 67909 [details]
Example of exported PDF document
Comment 3 Camilla Boemann 2012-01-18 21:41:12 UTC
Git commit 5662eec837576889b0955b69ca2b391936362686 by C. Boemann.
Committed on 18/01/2012 at 17:13.
Pushed by boemann into branch 'master'.

Make printing not show textselections or formatting characters

M  +3    -0    libs/flake/KoShapePaintingContext.cpp
M  +1    -0    libs/flake/KoShapePaintingContext.h
M  +2    -0    libs/textlayout/KoTextDocumentLayout.h
M  +25   -24   libs/textlayout/KoTextLayoutArea_paint.cpp
M  +1    -0    plugins/textshape/TextShape.cpp

http://commits.kde.org/calligra/5662eec837576889b0955b69ca2b391936362686
Comment 4 Camilla Boemann 2012-01-19 13:56:37 UTC
*** Bug 291955 has been marked as a duplicate of this bug. ***