Make printing not show textselections or formatting characters

BUG:288341